[gd_scene load_steps=12 format=2]

[ext_resource path="res://Extra.gd" type="Script" id=1]
[ext_resource path="res://buttons/CloseRed.png" type="Texture" id=2]
[ext_resource path="res://buttons/Closegreen.png" type="Texture" id=3]
[ext_resource path="res://buttons/CreditsRed.png" type="Texture" id=4]
[ext_resource path="res://sfx/hover.tres" type="AudioStream" id=5]
[ext_resource path="res://buttons/CreditsGreen.png" type="Texture" id=6]
[ext_resource path="res://Fonts/Futured/Futured.TTF" type="DynamicFontData" id=7]
[ext_resource path="res://help/help2.png" type="Texture" id=8]
[ext_resource path="res://help/help1.png" type="Texture" id=9]
[ext_resource path="res://help/help3.png" type="Texture" id=10]

[sub_resource type="DynamicFont" id=1]
size = 70
outline_color = Color( 1, 0, 0, 1 )
font_data = ExtResource( 7 )

[node name="Extra" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 413.0
margin_bottom = 536.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
light_mask = 0
margin_left = -34.7297
margin_top = -36.4602
margin_right = 1884.27
margin_bottom = 1252.54
color = Color( 0, 0, 0, 0.972549 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer3" type="MarginContainer" parent="ColorRect"]
margin_left = 1252.0
margin_top = 1142.0
margin_right = 1661.0
margin_bottom = 1275.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/MarginContainer3"]
margin_left = 9.0
margin_right = 400.0
margin_bottom = 133.0
size_flags_horizontal = 4
custom_constants/separation = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/MarginContainer3/VBoxContainer"]
margin_right = 391.0
margin_bottom = 120.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 54

[node name="Close" type="TextureButton" parent="ColorRect/MarginContainer3/VBoxContainer/VBoxContainer"]
margin_right = 391.0
margin_bottom = 120.0
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 3 )

[node name="Credits" type="MarginContainer" parent="ColorRect"]
margin_left = 5.0
margin_top = 1129.0
margin_right = 902.0
margin_bottom = 1284.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/Credits"]
margin_left = 197.0
margin_right = 699.0
margin_bottom = 155.0
size_flags_horizontal = 4
custom_constants/separation = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/Credits/VBoxContainer"]
margin_right = 502.0
margin_bottom = 144.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 54

[node name="Credits" type="TextureButton" parent="ColorRect/Credits/VBoxContainer/VBoxContainer"]
margin_right = 502.0
margin_bottom = 144.0
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 6 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 10.0
margin_top = 49.0
margin_right = 938.0
margin_bottom = 967.0
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
bbcode_enabled = true
bbcode_text = "In Future Ball, players compete by throwing an energy ball to eachother, which will explode if it makes direct contact with an opponent, giving the attacking player a point. Not throwing the ball before a set time or falling from the stage takes away a point. 

If the ball bounces with any other object, it will deactivate and turn blue, allowing for any player to catch it. The states of the ball are shown as red when it will explode on contact, and blue when it's catchable.

The game ends when a player gets 7 points, winning the game. If a player gets to -3 points, the victory is given to the other player.
"
text = "In Future Ball, players compete by throwing an energy ball to eachother, which will explode if it makes direct contact with an opponent, giving the attacking player a point. Not throwing the ball before a set time takes away a point. 

If the ball bounces with any other object, it will deactivate and turn blue, allowing for any player to catch it. The states of the ball are shown as red when it will explode on contact, and blue when it's catchable.

The game ends when a player gets 7 points, winning the game. If a player gets to -3 points, the victory is given to the other player.
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFXHover" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "SFX"

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 1067.0
margin_top = 81.0
margin_right = 1791.0
margin_bottom = 935.0
color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="help1" type="Sprite" parent="ColorRect2"]
position = Vector2( 364.27, 228.14 )
scale = Vector2( 1.68268, 1.68268 )
texture = ExtResource( 9 )

[node name="help2" type="Sprite" parent="ColorRect2/help1"]
position = Vector2( -0.283997, 194.838 )
texture = ExtResource( 8 )

[node name="help3" type="Sprite" parent="ColorRect2/help1/help2"]
position = Vector2( -0.322449, 178.715 )
scale = Vector2( 1.00165, 1.00165 )
texture = ExtResource( 10 )
[connection signal="pressed" from="ColorRect/MarginContainer3/VBoxContainer/VBoxContainer/Close" to="." method="_on_Close_pressed"]
[connection signal="mouse_entered" from="ColorRect/Credits/VBoxContainer/VBoxContainer/Credits" to="." method="_on_Credits_mouse_entered"]
[connection signal="pressed" from="ColorRect/Credits/VBoxContainer/VBoxContainer/Credits" to="." method="_on_Credits_pressed"]
